# fastapi_experiments

./: README.md  alembic.ini  main.py  models.py  pyproject.toml
alembic/versions/: 6dd314e405bc_create_user_and_poll_tables.py
database/: db.py
