[tool.poetry]
name = "fastapi_experiments"
version = "0.1.0"
description = ""
authors = ["atmay"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
SQLAlchemy = "^1.4.32"
databases = "^0.5.5"
alembic = "^1.7.6"
black = "^22.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
